@@ -276,3 +276,7 @@
   - optimize PP almost_primes() (uses forfactored)
   - any use for genk (iterator for k)?
   - reduce_prime_count_factor(k,n) should be void and modify k,n.
+
+- various from Pari 2.11
+
+- GMP is_smooth, is_rough, is_powerful, various almost_primes
