@@ -3563,6 +3563,78 @@ int is_rough(UV n, UV k) {
   return (fac[0] >= k);
 }
 
+int is_powerful(UV n, UV k) {
+  UV pk;
+  int e, res;
+
+  if (n <= 1 || k <= 1) return 1;
+
+  if (!(n&1)) { /* Check and remove all multiples of 2 */
+    if (n & ((UVCONST(1) << k)-1)) return 0;
+    n >>= ctz(n);
+    if (n == 1) return 1;
+  }
+
+  /* Quick checks */
+  if (k == 2) {
+    if (   (!(n %  3) && (n %     9))
+        || (!(n %  5) && (n %    25))
+        || (!(n %  7) && (n %    49))
+        || (!(n % 11) && (n %   121))
+        || (!(n % 13) && (n %   169)) ) return 0;
+  } else if (k == 3) {
+    if (   (!(n %  3) && (n %    27))
+        || (!(n %  5) && (n %   125))
+        || (!(n %  7) && (n %   343))
+        || (!(n % 11) && (n %  1331)) ) return 0;
+  } else {
+    if (   (!(n %  3) && (n %    81))
+        || (!(n %  5) && (n %   625))
+        || (!(n %  7) && (n %  2401))
+        || (!(n % 11) && (n % 14641)) ) return 0;
+  }
+
+#if 0   /* Full factoring.  Very simple and reasonably efficient. */
+  {
+    UV fac[MPU_MAX_FACTORS+1];
+    UV exp[MPU_MAX_FACTORS+1];
+    int i, nfactors;
+    nfactors = factor_exp(n, fac, exp);
+    for (i = 0; i < nfactors; i++)
+      if (exp[i] < k)
+        return 0;
+    return 1;
+  }
+#endif
+
+  /* Rather than full factoring, we'll use trial division.  For k=2, we
+   * only need to check up to the fourth root of n, and k=3 to the sixth.
+   * Even for k=2 this is faster than full factoring on average. */
+
+  /* At every checkpoint (new prime p) for k=2 either:
+   *   1) N < p^4  and N=1, p^2, q^2, p^3, or q^3. (q>p).  Return 1.
+   *   2) N < p^4  otherwise, N cannot be powerful.  Return 0;
+   *   3) N = p^4  is_square caught this and returned 1.
+   * So the next possibility is p^2 * q^2 where q = next_prime(p).
+   * Check n < p^4 before each new prime, and condition 1 after modifying n.
+   */
+
+  /* We could save 5-10% by special casing k=2 and pulling 3 from the loop */
+
+  if (n == 1 || powerof(n) >= k) return 1;
+  res = 0;
+  START_DO_FOR_EACH_PRIME(3, rootof(n, 2*k)) {
+    pk = ipow(p,k);
+    if (n < pk*pk) break;
+    if (!(n%p)) {
+      if (n%pk) break;
+      for (n /= pk; (n%p) == 0; n /= p) ;
+      if (n == 1 || powerof(n) >= k) { res = 1; break; }
+    }
+  } END_DO_FOR_EACH_PRIME
+  return res;
+}
+
 #if 0
 /* This is the de Bruijn approximation, not exact! */
 static long double dickman_rho(long double u) {
